<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.anakinfoxe.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/colorMainBackground"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:minHeight="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/tv_main_title"
        android:textSize="9pt"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/tv_main_title"
        android:layout_weight="0.35" />

    <Button
        style="@style/MainButton"
        android:background="@color/colorAppButton"
        android:text="@string/btn_spotify_streamer"
        android:id="@+id/btn_spotify_streamer" />

    <Button
        style="@style/MainButton"
        android:background="@color/colorAppButton"
        android:text="@string/btn_scores_app"
        android:id="@+id/btn_scores_app" />

    <Button
        style="@style/MainButton"
        android:background="@color/colorAppButton"
        android:text="@string/btn_library_app"
        android:id="@+id/btn_library_app" />

    <Button
        style="@style/MainButton"
        android:background="@color/colorAppButton"
        android:text="@string/btn_build_it_bigger"
        android:id="@+id/btn_build_it_bigger" />

    <Button
        style="@style/MainButton"
        android:background="@color/colorAppButton"
        android:text="@string/btn_xyz_reader"
        android:id="@+id/btn_xyz_reader" />

    <Button
        style="@style/MainButton"
        android:background="@color/colorCapstoneButton"
        android:text="@string/btn_capstone"
        android:id="@+id/btn_capstone" />

</LinearLayout>
